refactor: update styles and layout for Achievements1, Contact1, Footer1, Hero1, Projects1, Skills1 components for improved responsiveness and consistency

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -12,6 +12,10 @@ dist
 dist-ssr
 *.local
 
+# Agent skills
+.agents/
+skills.sh
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
