--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "chess.js": "^1.4.0",
     "framer-motion": "^12.34.0",
     "react": "^19.2.0",
+    "react-chessboard": "^5.10.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
     "tailwindcss": "^4.1.18"
